@@ -124,6 +124,10 @@ https://github.com/elastic/beats/compare/v5.2.2...v5.3.0[View commits]
 
 - Fix empty registry file on machine crash. {issue}3537[3537]
 
+*Heartbeat*
+
+- Add default ports in HTTP monitor. {pull}3924[3924]
+
 *Metricbeat*
 
 - Add error handling to system process metricset for when Linux cgroups are missing from the kernel. {pull}3692[3692]
